[package]
name = "aceman"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

[lib]

[[bin]]
name = "aceman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
openssl = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.10", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
structopt = "0.3"
